--- a/index.html
+++ b/index.html
@@ -3,168 +3,330 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Invitación Vintage Elegante</title>
+
+<title>Boda Víctor & Estiven</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&display=swap');
+
+/* ===== AJUSTES IPHONE ===== */
+html, body {
+  height: 100%;
+}
 
 body {
   margin: 0;
-  height: 100vh;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Cormorant Garamond', serif;
+  min-height: -webkit-fill-available;
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('https://img.freepik.com/fotos-premium/patron-floral-acuarela-rosas-rosadas-amarillas-naranjas-otras-flores-sobre-fondo-blanco_1357641-4040.jpg?semt=ais_hybrid&w=740&q=80') no-repeat center center fixed;
-  background-size: cover;
-  overflow: hidden;
-  color: #4a3f35;
+  flex-direction: column;
+
+  background:
+  linear-gradient(rgba(130,166,127,0.55), rgba(255,255,255,0.65)),
+  url('https://fabricbistro.com/cdn/shop/products/2_c234bf26-d5b6-4ec0-886b-1faf6fc446e2_1024x1024@2x.jpg?v=1620663601')
+  center / cover no-repeat;
 }
 
-/* Tarjeta principal */
-.card {
-  position: relative;
-  text-align: center;
-  padding: 3rem 2.5rem;
-  border-radius: 20px;
-  background: rgba(255,255,240,0.9); /* tarjeta clara sobre fondo vintage */
-  box-shadow: 0 10px 30px rgba(150,120,80,0.3);
-  max-width: 500px;
-  overflow: hidden;
+/* ===== PORTADA ===== */
+.cover {
+  position: fixed;
+  inset: 0;
+  background:
+  linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)),
+  url('https://previews.123rf.com/images/magenta10/magenta102009/magenta10200900011/155232071-vintage-beige-ornamental-background-embossed-paper-texture-seamless-pattern-in-neutral-color.jpg')
+  center / cover no-repeat;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  z-index: 100;
+  transition: 0.8s ease;
 }
 
-/* Brillo sutil estilo antiguo */
-.shine {
-  position: absolute;
-  width: 150%;
-  height: 150%;
-  top: -25%;
-  left: -25%;
-  background: linear-gradient(120deg, rgba(255,255,220,0.15) 0%, rgba(255,255,220,0) 60%);
-  transform: rotate(45deg);
-  animation: shine 6s infinite;
+.cover.hide {
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0.95);
+}
+
+.cover h1 {
+  font-family: 'Great Vibes', cursive;
+  font-size: 3rem;
+  color: #5f6f3e;
+  margin: 0;
+}
+
+.cover p {
+  color: #7b8a55;
+  margin: 0.5rem 0 1.5rem;
+}
+
+.cover button {
+  padding: 0.8rem 2.2rem;
+  border-radius: 30px;
+  border: 1px solid #5f6f3e;
+  background: transparent;
+  color: #5f6f3e;
+  font-size: 1.1rem;
+}
+
+/* ===== PÉTALOS ===== */
+.petals {
+  position: fixed;
+  inset: 0;
   pointer-events: none;
   z-index: 1;
 }
-@keyframes shine {
-  0% { transform: translateX(-100%) rotate(45deg); }
-  100% { transform: translateX(100%) rotate(45deg); }
+
+.petal {
+  position: absolute;
+  top: -10%;
+  background: radial-gradient(circle at 30% 30%, #a7b08a, #5f6f3e);
+  border-radius: 60% 40% 60% 40%;
+  opacity: 0.45;
+  animation: fall linear infinite;
 }
 
-/* Títulos */
-h1 {
-  font-family: 'Great Vibes', cursive;
-  font-size: 3rem;
-  color: #7d5a3c;
-  text-shadow: 0 0 10px #ecd9b0;
-  margin-bottom: 0.5rem;
+@keyframes fall {
+  to {
+    transform: translateY(120vh) rotate(360deg);
+    opacity: 0;
+  }
 }
 
-h2 {
-  font-family: 'Great Vibes', cursive;
-  font-size: 2rem;
-  color: #a87e5a;
-  text-shadow: 0 0 8px #ecd9b0;
-  margin: 0.5rem 0;
-}
-
-p {
-  font-size: 1rem;
-  color: #5c4b3b;
-  margin: 0.3rem 0;
-}
-
-/* Botones estilo antiguo */
-a.btn {
-  display: inline-block;
-  font-family: 'Playfair Display', serif;
-  font-size: 1rem;
-  background: #d4c1a5;
-  color: #4a3f35;
-  text-decoration: none;
-  padding: 0.6rem 1.2rem;
-  border-radius: 20px;
-  margin: 0.5rem 0;
-  box-shadow: 0 5px 15px rgba(120,90,50,0.3);
-  transition: transform 0.2s, box-shadow 0.3s;
-}
-a.btn:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 8px 25px rgba(120,90,50,0.5);
-}
-
-/* Contenedor de música */
-.music-container {
-  margin-top: 1.5rem;
-}
-.music-container audio {
-  outline: none;
-  border-radius: 10px;
-}
-
-/* Botón flotante de WhatsApp */
-.share-whatsapp {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: #25D366;
-  color: white;
-  font-size: 1.2rem;
-  font-weight: bold;
-  border: none;
-  border-radius: 50px;
-  padding: 0.8rem 1.2rem;
-  cursor: pointer;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  transition: transform 0.2s, box-shadow 0.3s;
+/* ===== TARJETA ===== */
+.invitation {
+  background: white;
+  border-radius: 22px;
+  max-width: 360px;
+  width: 85%;
+  padding: 2rem 1.6rem;
+  text-align: center;
+  position: relative;
   z-index: 10;
+
+  box-shadow: 0 12px 35px rgba(107,116,67,.35);
+
+  animation:
+    showCard 1s ease forwards,
+    floatCard 6s ease-in-out infinite;
 }
-.share-whatsapp:hover {
-  transform: translateY(-2px) scale(1.05);
-  box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+
+@keyframes showCard {
+  from {opacity:0; transform:translateY(30px) scale(.95);}
+  to {opacity:1; transform:none;}
 }
+
+@keyframes floatCard {
+  50% { transform: translateY(-8px); }
+}
+
+/* BORDE */
+.invitation::before {
+  content:"";
+  position:absolute;
+  inset:-4px;
+  border-radius:26px;
+  background:linear-gradient(135deg,#e2e6b9,#ffffff,#e2e6b9);
+  z-index:-1;
+}
+
+/* FLOR */
+.invitation::after {
+  content:"";
+  position:absolute;
+  width:70px;
+  height:70px;
+  right:-10px;
+  bottom:-10px;
+  background-image:url('https://static.vecteezy.com/system/resources/thumbnails/048/870/076/small_2x/watercolor-border-illustration-with-green-gold-leaves-white-flowers-png.png');
+  background-size:contain;
+  background-repeat:no-repeat;
+}
+
+/* ===== TEXTOS ===== */
+.initials,
+.names {
+  font-family:'Great Vibes', cursive;
+  color:#5f6f3e;
+}
+
+.initials { font-size:2rem; }
+.names { font-size:2.1rem; margin:1rem 0; }
+
+.quote {
+  font-style:italic;
+  font-size:.9rem;
+  color:#7b8a55;
+}
+
+.text { font-size:.95rem; }
+
+.countdown {
+  font-weight:600;
+  color:#5f6f3e;
+  margin:1rem 0;
+}
+
+.date .day {
+  font-size:2rem;
+  color:#4f5f3a;
+}
+
+.place {
+  font-size:.85rem;
+}
+
+/* ===== ICONOS ===== */
+.icons {
+  display:flex;
+  justify-content:space-around;
+  margin-top:1.5rem;
+}
+
+.icon a {
+  display:block;
+  width:48px;
+  height:48px;
+  border:2px solid #5f6f3e;
+  border-radius:50%;
+  line-height:44px;
+  text-decoration:none;
+  color:#5f6f3e;
+  font-size:1.2rem;
+}
+
+/* ===== RESPONSIVE ===== */
+@media (max-width:480px) {
+  .names {font-size:1.7rem;}
+}
+
 </style>
 </head>
+
 <body>
 
-<div class="card">
-  <div class="shine"></div>
-  <h1>Un Capítulo Inolvidable</h1>
-  <p>✨ Te invita con mucho cariño ✨</p>
-  <h2>Emily Ramos</h2>
-  <p>💖 A compartir un momento especial lleno de recuerdos y alegría 💖</p>
+<!-- PORTADA -->
+<div class="cover" id="cover">
+  <h1>Víctor & Estiven</h1>
+  <p>29 · Agosto · 2026</p>
+  <button onclick="openInvite()">Ver invitación</button>
+</div>
 
-  <div class="info">
-    <p><strong>📅 Fecha:</strong> Domingo, 7 de diciembre</p>
-    <p><strong>🕗 Hora:</strong> 2:00 PM - 10:00 PM</p>
-    <p><strong>📍 Lugar:</strong> Colegio de Abogados Comayagua</p>
+<div class="petals"></div>
+
+<!-- INVITACIÓN -->
+<div class="invitation">
+
+<div class="initials">V & E</div>
+
+<div class="quote">
+“Así que ya no son dos, sino uno solo.<br>
+Lo que Dios ha unido, que no lo separe el hombre.”<br>
+<strong>Mateo 19:6</strong>
+</div>
+
+<div class="text">
+Con la bendición de Dios,<br>
+tenemos el honor de invitarte a celebrar<br>
+nuestro matrimonio
+</div>
+
+<div class="names">Víctor & Estiven</div>
+
+<div class="countdown" id="countdown"></div>
+
+<div class="date">
+  <div class="month">AGOSTO</div>
+  <div class="day">29</div>
+  <div class="year">2026</div>
+  <div>14:30 hrs</div>
+</div>
+
+<div class="place">
+<strong>Muelle Ereaga Kaia, 4, 1ª Planta</strong><br>
+48992 Algorta, Biscay<br>
+Bilbao, España
+</div>
+
+<div class="icons">
+  <div class="icon">
+    <a href="https://www.google.com/maps?q=Muelle+Ereaga+Kaia+4+Algorta+Bilbao" target="_blank">⚲</a>
+    Ubicación
   </div>
-
-  <div class="buttons">
-    <a href="https://www.google.com/maps?q=Colegio+de+Abogados+Comayagua" target="_blank" class="btn">📍 Ver ubicación</a>
-    <a href="https://wa.me/50493774198?text=Hola Emily, confirmo que asistiré a *Un Capítulo Inolvidable* invitado por *Emily Ramos*." target="_blank" class="btn">✅ Confirmar asistencia</a>
-    <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Un Capítulo Inolvidable&dates=20251207T140000Z/20251207T220000Z&details=Evento especial junto a Emily Ramos&location=Colegio de Abogados Comayagua&sf=true&output=xml" target="_blank" class="btn">🗓️ Agregar al calendario</a>
+  <div class="icon">
+    <a href="https://wa.me/34624689330?text=Confirmo%20mi%20asistencia%20a%20la%20Boda%20de%20Victor%20y%20Estiven." target="_blank">✔</a>
+    Confirmar
   </div>
-
-  <div class="music-container">
-    <audio controls>
-      <source src="https://www.bensound.com/bensound-music/bensound-sunny.mp3" type="audio/mpeg">
-      Tu navegador no soporta el elemento de audio.
-    </audio>
+  <div class="icon">
+    <a href="#" onclick="alert('Tu presencia es nuestro mayor regalo.\nSi deseas tener un detalle con nosotros, agradecemos lluvia de sobres.');return false;">✉</a>
+    Regalos
   </div>
 </div>
 
-<!-- Botón flotante WhatsApp -->
-<button class="share-whatsapp" onclick="compartirWhatsApp()"> Compartir</button>
+<audio id="music" loop>
+  <source src="https://www.bensound.com/bensound-music/bensound-tenderness.mp3" type="audio/mpeg">
+</audio>
+
+</div>
 
 <script>
-function compartirWhatsApp(){
-  const urlInvitacion = encodeURIComponent(window.location.href);
-  const mensaje = encodeURIComponent("Hola, te comparto esta invitación a *Un Capítulo Inolvidable* de Emily Ramos: " + urlInvitacion);
-  window.open(`https://wa.me/?text=${mensaje}`, '_blank');
+function openInvite(){
+  document.getElementById("cover").classList.add("hide");
+
+  const music = document.getElementById("music");
+  music.volume = 0.8;
+
+  music.play().catch(()=>{
+    document.body.addEventListener("touchstart",()=>{
+      music.play();
+    },{once:true});
+  });
+}
+
+/* CONTADOR */
+const weddingDate = new Date("August 29, 2026 14:30:00").getTime();
+
+setInterval(()=>{
+  const now = new Date().getTime();
+  const d = weddingDate - now;
+
+  if(d <= 0){
+    document.getElementById("countdown").innerHTML = "¡Hoy es el gran día!";
+    return;
+  }
+
+  const days = Math.floor(d / (1000*60*60*24));
+  const h = Math.floor((d % (1000*60*60*24)) / (1000*60*60));
+  const m = Math.floor((d % (1000*60*60)) / (1000*60));
+  const s = Math.floor((d % (1000*60)) / 1000);
+
+  document.getElementById("countdown").innerHTML =
+  Faltan ${days} días · ${h}h ${m}m ${s}s;
+},1000);
+
+/* PÉTALOS */
+const petals = document.querySelector(".petals");
+const total = window.innerWidth < 768 ? 8 : 14;
+
+for(let i=0;i<total;i++){
+  const p = document.createElement("span");
+  p.className = "petal";
+  const size = Math.random()*12+10;
+  p.style.width = size+"px";
+  p.style.height = size+"px";
+  p.style.left = Math.random()*100+"%";
+  p.style.animationDuration = (Math.random()*12+10)+"s";
+  p.style.animationDelay = Math.random()*5+"s";
+  petals.appendChild(p);
 }
 </script>
 
 </body>
 </html>
- 
