--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ body {
     <div class="month">AGOSTO</div>
     <div class="day">29</div>
     <div class="year">2026</div>
-    <div>14:30 hrs</div>
+    <div>14:00 hrs</div>
   </div>
 
   <div class="place">
@@ -263,7 +263,7 @@ body {
     </div>
     <div class="icon">
       <a href="#" onclick="showGiftMessage(); return false;">✉</a>
-      Regalos
+      Lluvia de <br> Sobres
     </div>
   </div>
 
